[workspace]
members = [
    "account-decoder",
    "banks-client",
    "banks-interface",
    "banks-server",
    "bloom",
    "bucket_map",
    "clap-utils",
    "cli",
    "cli-config",
    "cli-output",
    "client",
    "client-test",
    "core",
    "download-utils",
    "entry",
    "faucet",
    "frozen-abi",
    "genesis",
    "genesis-utils",
    "geyser-plugin-interface",
    "geyser-plugin-manager",
    "gossip",
    "install",
    "keygen",
    "ledger",
    "ledger-tool",
    "local-cluster",
    "logger",
    "measure",
    "merkle-tree",
    "metrics",
    "net-utils",
    "perf",
    "evm-utils/evm-block-recovery",
    "evm-utils/evm-bridge",
    "evm-utils/programs/evm_loader",
    "evm-utils/evm-state",
    "evm-utils/evm-rpc",
    "poh",
    "program-test",
    "programs/address-lookup-table",
    "programs/address-lookup-table-tests",
    "programs/bpf_loader",
    "programs/bpf_loader/gen-syscall-list",
    "programs/compute-budget",
    "programs/config",
    "programs/ed25519-tests",
    "programs/stake",
    "programs/vote",
    "programs/zk-token-proof",
    "rayon-threadlimit",
    "remote-wallet",
    "replica-lib",
    "replica-node",
    "rpc",
    "rpc-test",
    "runtime",
    "sdk",
    "sdk/cargo-build-bpf",
    "sdk/cargo-test-bpf",
    "send-transaction-service",
    "storage-bigtable",
    "storage-proto",
    "streamer",
    "sys-tuner",
    "test-validator",
    "transaction-status",
    "validator",
    "version",
    "zk-token-sdk",
]

exclude = [
    "programs/bpf",
]

# This prevents a Travis CI error when building for Windows.
resolver = "2"
[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
primitive-types = { git = "https://github.com/velas/parity-common", tag = "primitive-types-v0.12-with-borsh-support-nostd" }
rlp = { git = "https://github.com/velas/parity-common", tag = "primitive-types-v0.12-with-borsh-support-nostd" }
uint = { git = "https://github.com/velas/parity-common", tag = "primitive-types-v0.12-with-borsh-support-nostd" }
spl-memo = {  git = "https://github.com/velas/spl-memo", branch = "solana-v1.10"}
# TODO: remove once jsonrpc-core-client 18.0.1 is released
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc", rev = "e724d087defc0af35bc1c844049d1611588d8466", version = "18.0.0" }
jsonrpc-core-client = { git = "https://github.com/paritytech/jsonrpc", rev = "e724d087defc0af35bc1c844049d1611588d8466", version = "18.0.0" }
triedb = { git = "https://github.com/velas/triedb", tag = "primitive-types-v0.12", features = ["rocksdb"] }
