[package]
name = "evm-utils"
version = "0.1.0"
authors = ["Vladimir Motylenko <vld@stegos.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-evm-loader-program = { path = "./programs/evm_loader", version = "0.1.0" }
solana-sdk = { path = "../sdk", version = "1.3.11" }
solana-cli-config = { path = "../cli-config", version = "1.4.0" }
solana-clap-utils = { path = "../clap-utils", version = "1.4.0" }
evm-state = {path="./evm-state/", version = "0.1.0"}
structopt = { version = "0.3", features = [ "paw" ] }
bincode = "1.3.1"
serde_json="1.0"
paw = "1.0"
log = "0.4"
env_logger ="*"
hex="*"
solana-client = { path = "../client", version = "1.4.0" }