[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-genesis"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.41"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-genesis"

[dependencies]
base64 = "0.13.0"
clap = "2.33.1"
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
solana-clap-utils = { path = "../clap-utils", version = "=1.10.41" }
solana-cli-config = { path = "../cli-config", version = "=1.10.41" }
solana-entry = { path = "../entry", version = "=1.10.41" }
solana-ledger = { path = "../ledger", version = "=1.10.41" }
solana-logger = { path = "../logger", version = "=1.10.41" }
solana-runtime = { path = "../runtime", version = "=1.10.41" }
solana-sdk = { path = "../sdk", version = "=1.10.41" }
solana-stake-program = { path = "../programs/stake", version = "=1.10.41" }
solana-version = { path = "../version", version = "=0.7.0" }
solana-vote-program = { path = "../programs/vote", version = "=1.10.41" }

solana-evm-loader-program = { path = "../evm-utils/programs/evm_loader" }
evm-state = { path = "../evm-utils/evm-state" }
evm-rpc = { path = "../evm-utils/evm-rpc" }

tempfile = "3.3.0"
once_cell = "1.7.2"
log = "0.4"

[[bin]]
name = "velas-genesis"
path = "src/main.rs"

[lib]
name = "solana_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["with_evm"]
with_evm = []
