[package]
edition = "2018"
name = "velas-install"
description = "The Velas cluster software installer"
version = "1.10.41"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-install"

[dependencies]
atty = "0.2.11"
bincode = "1.3.1"
bzip2 = "0.4.3"
chrono = { version = "0.4.11", features = ["serde"] }
clap = { version = "2.33.1" }
console = "0.11.3"
ctrlc = { version = "3.1.5", features = ["termination"] }
dirs-next = "2.0.0"
indicatif = "0.15.0"
lazy_static = "1.4.0"
nix = "0.23.0"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "1.0.4"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.62"
serde_yaml = "0.8.13"
solana-clap-utils = { path = "../clap-utils", version = "=1.10.41" }
solana-client = { path = "../client", version = "=1.10.41" }
solana-config-program = { path = "../programs/config", version = "=1.10.41" }
solana-logger = { path = "../logger", version = "=1.10.41" }
solana-sdk = { path = "../sdk", version = "=1.10.41" }
solana-version = { path = "../version", version = "=0.7.0" }
# Temporary solution until this is fixed:
# https://github.com/alexcrichton/tar-rs/issues/295
#
#tar = "0.4.37"
tar = { package = "binstall-tar", version = "0.4.39" }
tempfile = "3.1.0"
url = "2.1.1"

[target."cfg(windows)".dependencies]
winapi = "0.3.8"
winreg = "0.7"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
