[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-replica-lib"
description = "The library used for replication by both the client and server"
version = "1.9.29"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"

[dependencies]
anyhow = "1.0.68"
crossbeam-channel = "0.5"
futures-util = "0.3"
log = "0.4.11"
prost = "0.11.0"
solana-rpc = { path = "../rpc", version = "=1.9.29" }
solana-runtime = { path = "../runtime", version = "=1.9.29" }
solana-sdk = { path = "../sdk", version = "=1.9.29" }
solana-client = { path = "../client", version = "=1.9.29" }
tokio = { version = "1.14.1", features = ["full"] }
tonic = { version = "0.8.1", features = ["tls", "transport", "gzip"] }

# Additional deps for triedb_repl_server
derive_more = "0.99.11"
evm-state = { path = "../evm-utils/evm-state" }
evm-rpc = { path = "../evm-utils/evm-rpc" }
primitive-types = "0.8.0"
rocksdb = { git = "https://github.com/velas/rust-rocksdb", version = "0.19.0", default-features = false }

triedb = { git = "https://github.com/velas/triedb.git", branch = "master", features = ["rocksdb"] }

# Additional deps for triedb_repl_client
serde_json = "1.0.82"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
tonic-build = "0.8.0"
