[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-replica-lib"
description = "The library used for replication by both the client and server"
version = "1.10.41"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"

[dependencies]

thiserror = "1.0.40"
crossbeam-channel = "0.5"
futures-util = "0.3"
log = "0.4.11"
prost = "0.11.0"
solana-rpc = { path = "../rpc", version = "=1.10.41" }
solana-runtime = { path = "../runtime", version = "=1.10.41" }
solana-sdk = { path = "../sdk", version = "=1.10.41" }
solana-storage-bigtable = { path = "../storage-bigtable", version = "=1.10.41" }
solana-ledger = { path = "../ledger", version = "=1.10.41" }
clap = "2.33.1"
tokio = { version = "~1.14.1", features = ["full"] }
tonic = { version = "0.8.1", features = ["tls", "transport", "gzip"] }
async-trait = "0.1.64"

# Additional deps for triedb_repl_server
derive_more = "0.99.11"

sha3 = "0.9.1"

rlp = "0.5.0"
derivative="2.2"
evm-state = { path = "../evm-utils/evm-state" }
evm-rpc = { path = "../evm-utils/evm-rpc" }
primitive-types = "0.12"
rocksdb = { package = "rocksdb", version = "0.21", default-features = false }
triedb = { git = "https://github.com/velas/triedb", tag = "primitive-types-v0.12", features = ["rocksdb"] }
rangemap = { version = "1.3.0", features = ["serde1"]}

# Additional deps for triedb_repl_client
serde_json = "1.0.82"
serde = "1.0.152"
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
assert_matches = "1.5.0"

[build-dependencies]
tonic-build = "0.8.0"
