[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-replica-node"
description = "Solana replication node"
version = "1.10.41"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"

[[bin]]
name = "triedb_replica"
path = "src/bin/triedb.rs"

[[bin]]
name = "triedb_replica_client"
path = "src/bin/triedb_client.rs"

[dependencies]
clap = "2.33.1"
regex = "1"
crossbeam-channel = "0.5"
log = "0.4.14"
rand = "0.7.0"
etcommon-hexutil = "0.2.4"
evm-state = { path = "../evm-utils/evm-state" }
solana-clap-utils = { path = "../clap-utils", version = "=1.10.41" }
solana-client = { path = "../client", version = "=1.10.41" }
solana-download-utils = { path = "../download-utils", version = "=1.10.41" }
solana-genesis-utils = { path = "../genesis-utils", version = "=1.10.41" }
solana-gossip = { path = "../gossip", version = "=1.10.41" }
solana-ledger = { path = "../ledger", version = "=1.10.41" }
solana-logger = { path = "../logger", version = "=1.10.41" }
solana-net-utils = { path = "../net-utils", version = "=1.10.41" }
solana-replica-lib = { path = "../replica-lib", version = "=1.10.41" }
solana-rpc = { path = "../rpc", version = "=1.10.41" }
solana-runtime = { path = "../runtime", version = "=1.10.41" }
solana-sdk = { path = "../sdk", version = "=1.10.41" }
solana-send-transaction-service = { path = "../send-transaction-service", version = "=1.10.41" }
solana-streamer = { path = "../streamer", version = "=1.10.41" }
velas-validator = { path = "../validator", version = "=1.10.41" }
solana-version = { path = "../version", version = "=0.7.0" }
solana-storage-bigtable = { path = "../storage-bigtable", version = "=1.10.41" }
# To run triedb_repl_client
tokio = { version = "1.14.1", features = ["full"] }
tonic = { version = "0.8.1", features = ["tls", "transport", "gzip"] }


thiserror = "1.0.39"

futures = "0.3.26"
env_logger = "0.9"

[dev-dependencies]
serial_test = "0.6.0"
solana-core = { path = "../core", version = "=1.10.41" }
solana-local-cluster = { path = "../local-cluster", version = "=1.10.41" }
tempfile = "3.3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
tonic-build = "0.7.0"
