[package]
name = "state-rpc"
version = "0.1.0"
edition = "2021"
default-run = "server"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]] # Generate
name = "generate-state"
path = "src/bin/generate_state.rs"

[dependencies]
evm-state = { path = "../evm-utils/evm-state" }
evm-rpc = { path = "../evm-utils/evm-rpc" }
tempfile = "3.1.0"
rand = "0.8.3"
derive_more = "0.99.11"
triedb = { git = "https://github.com/velas/triedb", branch = "feat/gc-simple", features = ["rocksdb"] }

rlp = "0.5.0"
primitive-types = "0.8.0"
rayon="1.5"

rocksdb = { git = "https://github.com/velas/rust-rocksdb", branch = "transaction", version = "0.17.0", default-features = false }

tonic = "0.5"
prost = "0.8"

tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

env_logger = "0.9.0"


[build-dependencies]
tonic-build = "0.5"
