[package]
authors = ["Maksim Vykhota <m.vykhota@protonmail.com>", "Velas"]
name = "evm-block-recovery"
version = "0.1.0"
edition = "2021"
readme = "README.MD"

# build = "build.rs"

[dependencies]
anyhow = "1"
bincode = "1.3.3"
borsh = "0.9.3"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.0.14", features = ["derive"] }
dotenvy = "0.15.3"
env_logger = "0.9.0"
evm-rpc = { path = "../evm-rpc" }
evm-state = { path = "../evm-state" }
lazy_static = "1.4.0"
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = { path = "../../client" }
solana-evm-loader-program = { path = "../programs/evm_loader" }
solana-sdk = { path = "../../sdk", version = "=1.9.29" }
solana-storage-bigtable = { path = "../../storage-bigtable", version = "=1.9.29" }
solana-transaction-status = { path = "../../transaction-status", version = "=1.9.29" }
tokio = { version = "1", features = ["full"] }

# [build-dependencies]
# clap = { version = "3.2.8", features = ["derive"] }
# clap_complete = "3.2.3"