[package]
authors = ["Maksim Vykhota <m.vykhota@protonmail.com>", "Velas"]
name = "evm-block-recovery"
version = "0.1.0"
edition = "2021"
readme = "README.MD"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.3.21", features = ["derive"] }
clap_complete = "=4.3.2"
dotenvy = "0.15.3"
env_logger = "0.10.0"
evm-rpc = { path = "../evm-rpc" }
evm-state = { path = "../evm-state" }
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = { path = "../../client" }
solana-evm-loader-program = { path = "../programs/evm_loader" }
solana-sdk = { path = "../../sdk", version = "=1.10.41" }
solana-storage-bigtable = { path = "../../storage-bigtable", version = "=1.10.41" }
solana-transaction-status = { path = "../../transaction-status", version = "=1.10.41" }
tokio = { version = "1", features = ["full"] }
thiserror = "1"

backon = "0.4.0"
rangemap = { version = "1.3.0", features = ["serde1"]}
