[package]
name = "evm-bridge"
version = "0.1.0"
authors = ["Vladimir Motylenko <vld@stegos.com>"]
edition = "2018"

[dependencies]
evm-rpc = { path = "../evm-rpc" }
solana-sdk = { path = "../../sdk", version = "1.4.0" }
solana-client = { path = "../../client", version = "1.4.0" }
solana-cli-config = { path = "../../cli-config", version = "1.4.0" }
solana-core = { path = "../../core", version = "1.4.0" }
solana-runtime = { path = "../../runtime", version = "1.4.0" }
solana-transaction-status = { path = "../../transaction-status", version = "1.4.0" }
solana-account-decoder = { path = "../../account-decoder", version = "1.4.0" }
solana-logger = { path = "../../logger", version = "1.4.0" }
solana-evm-loader-program = { path = "../programs/evm_loader" }
structopt = { version = "0.3", features = ["paw"] }
serde_json = "1.0.60"
env_logger = "0.8.2"
paw = "1.0"
rlp = "0.5"
sha3 = "0.9.1"
bincode = "1.3"
hex = "0.4.2"
primitive-types = "0.8.0"
secp256k1 = { version = "0.19.0", features = ["recovery", "global-context"] }
evm-state = { path = "../evm-state" }
log = "0.4.11"
jsonrpc-core = "17.1.0"
jsonrpc-core-client = { version = "17.1.0", features = ["ws"] }
jsonrpc-derive = "17.1.0"
jsonrpc-http-server = "17.1.0"
jsonrpc-pubsub = "17.0.0"
jsonrpc-ws-server = "17.0.0"
snafu = "0.6"
anyhow = "1.0"
tokio = "1"
# txpool = { git = "https://github.com/velas/transaction-pool", tag = "v1.0.0-alpha" }
txpool = { git = "https://github.com/velas/transaction-pool", branch = "upstream-update" }
regex = "1.5.4"
once_cell = "1"