[package]
name = "evm-bridge"
version = "0.1.0"
authors = ["Vladimir Motylenko <vld@stegos.com>"]
edition = "2018"

[dependencies]
evm-rpc = { path = "../evm-rpc" }
solana-sdk = { path = "../../sdk", version = "1.9.13" }
solana-client = { path = "../../client", version = "1.9.13" }
solana-cli-config = { path = "../../cli-config", version = "1.9.13" }
solana-core = { path = "../../core", version = "1.9.13" }
solana-rpc = { path = "../../rpc", version = "1.9.13" }
solana-runtime = { path = "../../runtime", version = "1.9.13" }
solana-transaction-status = { path = "../../transaction-status", version = "1.9.13" }
solana-account-decoder = { path = "../../account-decoder", version = "1.9.13" }
solana-logger = { path = "../../logger", version = "1.9.13" }
solana-evm-loader-program = { path = "../programs/evm_loader" }
solana-version = { path = "../../version" }
serde = "1.0.122"
serde_json = "1.0.60"
env_logger = "0.10.0"
clap = { version = "4.3.21", features = ["derive"] }
rlp = "0.5.2"
sha3 = "0.9.1"
bincode = "1.3"
borsh = "0.9.3"
hex = "0.4.2"
primitive-types = "0.12"
secp256k1 = { version = "0.19.0", features = ["recovery", "global-context"] }
evm-state = { path = "../evm-state" }
log = "0.4.11"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws"] }
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-ws-server = "18.0.0"
snafu = "0.7"
anyhow = "1.0"
tokio = "1"
txpool = { git = "https://github.com/velas/transaction-pool", tag = "v1.0.0-alpha" }
regex = "1.5.4"
reqwest = { version = "0.11.10", default-features = false, features = ["blocking", "rustls-tls", "json"] }
once_cell = "1"
derivative = "2.2"
base64 = "0.21.2"
semver = "1.0"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "smallvec",
    "fmt",
    "ansi",
    "std",
    "env-filter"
] }
tracing-attributes = "0.1.26"
tracing-opentelemetry  =  "0.20.0"
opentelemetry = { version = "0.20.0", default-features = false, features = ["trace"] }
opentelemetry-jaeger = { version = "0.19.0", features = [ "reqwest_collector_client", "rt-tokio" ] }

[features]
default=[]
