[package]
name = "evm-rpc"
version = "0.1.0"
authors = ["Vladimir Motylenko <vld@stegos.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "14.2.0"
jsonrpc-core-client = { version = "14.2.0", features = ["ws"] }
jsonrpc-derive = "14.2.1"
jsonrpc-http-server = "14.2.0"
jsonrpc-pubsub = "14.2.0"
serde = "1.0.112"
serde_json = "1.0"
primitive-types = "0.7"
evm-state = {path="../evm-state"}
solana-evm-loader-program = {path="../programs/evm_loader"}
hex = "0.4.2"
rlp = "0.4.5"
secp256k1 = { version = "0.19.0", features = ["recovery", "global-context"] }