[package]
name = "evm-rpc"
version = "0.1.0"
authors = ["Vladimir Motylenko <vld@stegos.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "17.1.0"
jsonrpc-core-client = { version = "17.1.0", features = ["ws"] }
jsonrpc-derive = "17.1.0"
jsonrpc-http-server = "17.1.0"
jsonrpc-pubsub = "17.1.0"
serde = "1.0.112"
serde_json = "1.0.54"
primitive-types = "0.8.0"
evm-state = { path = "../evm-state" }
hex = "0.4.2"
rustc-hex = "2.1"
rlp = "0.5.0"
secp256k1 = { version = "0.19.0", features = ["recovery", "global-context"] }
snafu = "0.6.8"
uint = "0.9"
anyhow = "1.0"
derive_more = "0.99.11"
ethbloom = "0.11"

ethabi = "13.0"
