[package]
name = "evm-rpc"
version = "0.1.0"
authors = ["Vladimir Motylenko <vld@stegos.com>"]
edition = "2018"

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws"] }
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
serde = "1.0.112"
serde_json = "1.0.54"
primitive-types = { version = "0.12", features = ["serde"] }
evm-state = { path = "../evm-state" }
hex = "0.4.2"
rustc-hex = "2.1"
rlp = "0.5.2"
secp256k1 = { version = "0.19.0", features = ["recovery", "global-context"] }
snafu = "0.7"
uint = "0.9"
anyhow = "1.0"
derive_more = "0.99.11"
ethbloom = "0.13.0"

ethabi = "18.0.0"
