[package]
name = "evm-state"
version = "0.1.0"
authors = ["Vladimir Motylenko <vld@stegos.com>"]
edition = "2018"

[dependencies]
evm = { git = "https://github.com/velas/evm", branch = "add-traces", features = ["with-serde"] }
secp256k1 = { version="0.19.0", features=["recovery", "global-context"] }
# force rand version, because 0.6.5 break compatibility with secp256k1
rand2 = { version = "=0.6.1", package = "rand" }
rocksdb = { version = "0.16.0", default-features = false }
triedb = { git = "https://github.com/velas/triedb", branch = "chore/bump-rocksdb", features = ["rocksdb"] }

primitive-types = "0.8.0"
keccak-hash = "0.6"
log = "0.4.11"
simple_logger = "1.11"
hex = "0.4.2"
serde = "1.0"
sha3 = "0.9.1"
rand = "0.8.3"
rlp = "0.5.0"
thiserror = "1.0.22"
anyhow = "1.0.34"
bincode = "1.3.1"
lazy_static = "1.4.0"
bytes = "0.6.0"
snafu = "0.6.8"
derive_more = "0.99.11"
tempfile = "3.1.0"
itertools = "0.10"
ethbloom = "0.11.0"
auto_enums = "0.7"
fixed-hash = "0.7.0"
impl-rlp = "0.3.0"
derivative = "2.2"

[dev-dependencies]
criterion = "0.3.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
paste = "1.0.3"
ethabi = "13.0.0"
once_cell = "1.6.0"
etc_block = { version="0.5", package="etcommon-block" }
etc_rlp = { version="0.2", package="etcommon-rlp" }

[[bench]]
name = "bench_evm"
harness = false

[[bench]]
name = "bench_storage"
harness = false
