[package]
name = "solana-sleep-program"
version = "1.5.14"
description = "Solana Noop program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
log = "0.4.11"
solana-logger = { path = "../../logger", version = "1.9.13" }
solana-sdk = { path = "../../sdk", version = "1.9.13" }
solana-program-runtime = { path = "../../program-runtime", version = "1.9.13" }
byteorder = "1.4.3"

[lib]
crate-type = ["lib", "cdylib"]
name = "solana_sleep_program"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
