[package]
name = "velas-account-program"
version = "0.0.1"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
serde = { version = "1.0.125", features = ["derive"] }

solana-sdk = { path = "../../sdk", version = "1.9.13" }

[dev-dependencies]
base64 = "0.13.0"