[package]
name = "solana-evm-loader-program"
version = "0.1.0"
description = "Solana EVM loader"
authors = ["Vladimir Motylenko <vld@stegos.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4.8"
solana-logger = { path = "../../../logger", version = "1.3.11" }
solana-sdk = { path = "../../../sdk", version = "1.3.11" }
evm = { version = "0.17", features = ["with-serde"] }
evm-state = { path = "../../evm-state", version = "0.1"}
bincode = "1.2.0"
primitive-types = "0.7.2"
etcommon-block = "0.5.2"
etcommon-rlp="0.2.5"

[lib]
crate-type = ["lib", "cdylib"]
name = "solana_evm_loader_program"